--- a/src/routes/Event/EventDashboard/index.scss
+++ b/src/routes/Event/EventDashboard/index.scss
@@ -3,7 +3,7 @@
 .EventDashboard {
   overflow-y: scroll;
   overflow-x: hidden;
-  @include tablet-landscape {
+  @include tablet-portrait {
     background: url(../../../assets/media/dashboard-backdrop.jpg);
     background-position: right bottom;
     background-repeat: no-repeat;
